--- a/docker/qa/Dockerfile
+++ b/docker/qa/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:16-alpine AS deps
 RUN apk add --no-cache libc6-compat
+RUN apk --no-cache add curl
+
 WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
