feat: edit next auth url

--- a/.env.qa
+++ b/.env.qa
@@ -1,5 +1,5 @@
 HEROS_BASE_URL=https://heros-api.hn.smartosc.com/api
-NEXTAUTH_URL=https://heros.hn.smartosc.com
+NEXTAUTH_URL=https://app-dev.heros.xyz
 NEXTAUTH_SECRET=ceac1d1a05dd16a32b1e2701a051860a
 
 WEBSITE_URL=https://heros-nightly.hn.smartosc.com
