--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROS_BASE_URL=https://api-dev.heros.xyz/api
+HEROS_BASE_URL=http://192.168.17.161:3000/api
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=b01051b58bfa48eb6f38cab4eb6b9a9f
 
