--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.18.7",
     "next-query-params": "^4.1.0",
     "next-redux-wrapper": "^8.1.0",
+    "nextjs-google-analytics": "^2.3.3",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
