--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^8.0.4",
     "react-select": "^5.7.0",
     "react-share": "^4.4.1",
+    "react-textarea-autosize": "^8.4.1",
     "react-use": "^17.4.0",
     "react-waypoint": "^10.3.0",
     "react-window": "^1.8.8",
