--- a/.env.uat
+++ b/.env.uat
@@ -1,12 +1,12 @@
 HEROS_BASE_URL=https://api-uat.heros.xyz/api
 NEXTAUTH_URL=https://app-uat.heros.xyz
-NEXTAUTH_SECRET=ceac1d1a05dd16a32b1e2701a051860a
+NEXTAUTH_SECRET=
 
 WEBSITE_URL=https://uat.heros.xyz
 HEROS_MEDIA_URL=https://cdn-uat.heros.xyz
 
-GOOGLE_CLIENT_ID=733814603964-3tecfkr437gdu0o7fjfg6iich816eomg.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-FACEBOOK_CLIENT_ID=535283012114445
-FACEBOOK_CLIENT_SECRET=69052f35cf5306ecae4365262add8b6f
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
