--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nextjs-google-analytics": "^2.3.3",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-if": "^4.1.4",
     "react-input-mask": "^2.0.4",
