firebase integration wip test

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HEROS_BASE_URL=http://localhost:3000/api
-NEXTAUTH_URL=http://localhost:3000
+HEROS_BASE_URL=http://localhost:3001/api
+NEXTAUTH_URL=http://localhost:3001
 NEXTAUTH_SECRET=b01051b58bfa48eb6f38cab4eb6b9a9f
 
 WEBSITE_URL=https://heros-nightly.hn.smartosc.com
@@ -10,3 +10,10 @@ GOOGLE_CLIENT_SECRET=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
 
 FACEBOOK_CLIENT_ID=1234820987119158
 FACEBOOK_CLIENT_SECRET=2d0cef388015c7d51f877e1eafa1e001
+
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCPOZzauGoBfLafCP_sl9h8FaL2LflS9Qw
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=next-test-8f1b3.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=next-test-8f1b3
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=next-test-8f1b3.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=247387227827
+NEXT_PUBLIC_FIREBASE_APP_ID="1:247387227827:web:29de5eab3652c7e66352c6"
