--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -f .env next dev -p 3001",
+    "dev": "env-cmd -f .env next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -24,6 +24,7 @@
     "country-flags-svg": "^1.1.8",
     "dayjs": "^1.11.6",
     "env-cmd": "^10.1.0",
+    "firebase": "^9.21.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.1.7",
     "next": "13.1.1",
@@ -37,6 +38,7 @@
     "react-bus": "^3.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-if": "^4.1.4",
     "react-input-mask": "^2.0.4",
     "react-redux": "^8.0.4",
