--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dayjs": "^1.11.6",
     "env-cmd": "^10.1.0",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.1.7",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
+    "next-firebase-auth": "^1.0.0-canary.19",
     "next-pwa": "^5.6.0",
     "next-query-params": "^4.1.0",
     "next-redux-wrapper": "^8.1.0",
