--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "env-cmd": "^10.1.0",
     "firebase": "^9.21.0",
     "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.4.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.1.7",
     "next": "13.1.1",
