--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@firebase/storage": "^0.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.1.3",
     "cookies-next": "^2.1.1",
