--- a/.env
+++ b/.env
@@ -29,3 +29,6 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=testings-1900c
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=testings-1900c.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=482009123618
 NEXT_PUBLIC_FIREBASE_APP_ID=1:482009123618:web:9d0e9d1048e4cf68a6337b
+
+NEXT_PUBLIC_FIREBASE_CREDENTIALS={"apiKey": "AIzaSyBYziPIyG-oQv4zgjJBRVP9zJIqjkSdQnk","authDomain": "heros-dev-386505.firebaseapp.com","projectId": "heros-dev-386505","storageBucket": "heros-dev-386505.appspot.com","messagingSenderId": "48418726818","appId": "1:48418726818:web:dba7a88833da93b616c8fb","measurementId": "G-CT2S0HQF5G"}
+NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost
