--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HEROS_BASE_URL=http://localhost:3001/api
-NEXTAUTH_URL=http://localhost:3001
+HEROS_BASE_URL=http://localhost:3000/api
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=b01051b58bfa48eb6f38cab4eb6b9a9f
 
 WEBSITE_URL=https://heros-nightly.hn.smartosc.com
@@ -31,4 +31,4 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=482009123618
 NEXT_PUBLIC_FIREBASE_APP_ID=1:482009123618:web:9d0e9d1048e4cf68a6337b
 
 NEXT_PUBLIC_FIREBASE_CREDENTIALS={"apiKey": "AIzaSyBYziPIyG-oQv4zgjJBRVP9zJIqjkSdQnk","authDomain": "heros-dev-386505.firebaseapp.com","projectId": "heros-dev-386505","storageBucket": "heros-dev-386505.appspot.com","messagingSenderId": "48418726818","appId": "1:48418726818:web:dba7a88833da93b616c8fb","measurementId": "G-CT2S0HQF5G"}
-NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost
+# NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost
