--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.10.5",
     "@firebase/storage": "^0.11.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/stripe-js": "^1.53.0",
     "axios": "^1.1.3",
     "cookies-next": "^2.1.1",
     "country-flags-svg": "^1.1.8",
