--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_FIREBASE_CREDENTIALS={"apiKey": "AIzaSyBYziPIyG-oQv4zgjJBRVP9zJIqjkSdQnk","authDomain": "heros-dev-386505.firebaseapp.com","projectId": "heros-dev-386505","storageBucket": "heros-dev-386505.appspot.com","messagingSenderId": "48418726818","appId": "1:48418726818:web:dba7a88833da93b616c8fb","measurementId": "G-CT2S0HQF5G"}
 HEROS_MEDIA_URL=https://cdn-dev.heros.xyz
+WEBSITE_URL=https://herox.xyz
+HEROS_MEDIA_URL=https://cdn-dev.heros.xyz
