--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "country-flags-svg": "^1.1.8",
     "dayjs": "^1.11.6",
     "env-cmd": "^10.1.0",
-    "firebase": "^9.21.0",
+    "firebase": "^9.22.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.4.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.1.7",
     "next": "13.1.1",
-    "next-auth": "^4.18.7",
     "next-pwa": "^5.6.0",
     "next-query-params": "^4.1.0",
     "next-redux-wrapper": "^8.1.0",
@@ -52,6 +51,7 @@
     "react-use": "^17.4.0",
     "react-waypoint": "^10.3.0",
     "react-window": "^1.8.8",
+    "reactfire": "^4.2.2",
     "sharp": "^0.32.0",
     "slate": "^0.90.0",
     "slate-react": "^0.90.0",
